@@ -234,3 +234,7 @@ allow = $! $/
 [ValuesAndExpressions::RequireNumericVersion]
 [ValuesAndExpressions::UnexpandedSpecialLiteral]
 
+### Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter
+[Variables::ProhibitUnusedVarsStricter]
+allow_unused_subroutine_arguments = 1
+
