@@ -96,6 +96,7 @@
             "Perl::Critic::Policy::ValuesAndExpressions::ProhibitUnknownBackslash" : "94",
             "Perl::Critic::Policy::ValuesAndExpressions::RequireNumericVersion" : "94",
             "Perl::Critic::Policy::ValuesAndExpressions::UnexpandedSpecialLiteral" : "94",
+            "Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter" : "0.100",
             "Perl::Critic::Utils" : "0",
             "Pod::Wordlist" : "0",
             "Test::CPAN::Changes" : "0",
@@ -359,6 +360,7 @@
          "Perl::Critic::Policy::ValuesAndExpressions::ProhibitUnknownBackslash" : "94",
          "Perl::Critic::Policy::ValuesAndExpressions::RequireNumericVersion" : "94",
          "Perl::Critic::Policy::ValuesAndExpressions::UnexpandedSpecialLiteral" : "94",
+         "Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter" : "0.100",
          "Perl::Critic::Utils" : "1.130",
          "Pod::Wordlist" : "1.20",
          "Test::CPAN::Changes" : "0.400002",
