@@ -241,6 +241,7 @@ x_BuiltWith:
     Perl::Critic::Policy::ValuesAndExpressions::ProhibitUnknownBackslash: '94'
     Perl::Critic::Policy::ValuesAndExpressions::RequireNumericVersion: '94'
     Perl::Critic::Policy::ValuesAndExpressions::UnexpandedSpecialLiteral: '94'
+    Perl::Critic::Policy::Variables::ProhibitUnusedVarsStricter: '0.100'
     Perl::Critic::Utils: '1.130'
     Pod::Wordlist: '1.20'
     Test::CPAN::Changes: '0.400002'
